[project]
name = "prompt"
version = "0.2.0"
description = "Terminal prompt and project teleport"
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
#    "nicegui>=2.8.1",
#    "pywebview>=5.3.2",
]

[project.scripts]
prompt = "prompt:prompt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pudb>=2024.1.3",
    "ruff>=0.8.2",
]

# pywebview dependencies:
#    "pycairo>=1.27.0",
#    "pygobject>=3.50.0",
#    "pyqt5>=5.15.11",
#    "pyqtwebengine>=5.15.7",
#    "pywebview[qt]>=5.3.2",
